Half-working port of KubeJS to 1.19 (Note: THIS IS NOT PLAYABLE!)
Tags don't work, lord have mercy